--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "e-commerce",
-  "version": "1.0.0",
-  "description": "React E-Commerce Store",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "MIT"
+	"name": "e-commerce",
+	"version": "1.0.0",
+	"description": "React E-Commerce Store",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"build": "react-scripts build --prefix client"
+	},
+	"author": "",
+	"license": "MIT"
 }
